# Ball_star_Tree

./: Ball_Tree.h  Ball_Tree_Node.h  CMakeLists.txt  Drawer.py  NaiveKNN.h  NewDrawer.py  Point.h  README.md  drawKNN.py  main.cpp  pca.h
textfiles/: circle.txt  circles.txt  closePoints.txt  data.txt  data_g.txt  distances.txt  e_points.txt  objPoint.txt
